plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java-library'
}

repositories {
	mavenCentral()
}


bootJar.enabled = false
jar.enabled = true

allprojects {
	group = 'com.example.redis_pj'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '21'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	repositories {
		mavenCentral()
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	dependencies {
		implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
		implementation 'org.springframework.boot:spring-boot-starter'
		implementation 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		runtimeOnly 'com.mysql:mysql-connector-j'
//		developmentOnly 'org.springframework.boot:spring-boot-devtools'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}
